# ohtuminiprokkis

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
src/: db.py  main.py  models.py  random_generator.py  vinkkityyppi.py
src/tests/: db_test.py  ui_test.py
src/ui/: io.py  ui.py
