[tool.poetry]
name = "ohtuminiprokkis"
version = "0.1.0"
description = ""
authors = ["D3lux3 <dani.haapaniemi@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
SQLAlchemy = "^1.4.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
