[tool.poetry]
name = "ohtuminiprokkis"
version = "0.1.0"
description = ""
authors = ["D3lux3 <dani.haapaniemi@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
pylint = "^2.12.1"
coverage = "^6.2"
SQLAlchemy = "^1.4.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
